# mikan-script

./: Cargo.toml  README.md  atomic.peeledmikan  httpserver.peeledmikan  inc.peeledmikan
src/: README.md  main.rs
src/vm/: README.md  code_manager.rs  function.rs  io.rs  memory.rs  mod.rs  operations.rs  pre_decoder.rs  vm.rs
src/vm/instruction/: instructions  instructions.md  mod.rs
src/vm/instruction/operations/: bit_culc.rs  control_ops.rs  float_culc.rs  int_culc.rs  io_ops.rs  memory_ops.rs  mod.rs  register_ops.rs  vm_ops.rs
src/vm/io/: mod.rs  windows.rs
src/vm/operations/: mod.rs
syntax/: StateTrait.md  eg.md
tmp/: inline_ops.py
